# py-addivortes

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  publish.yml  python-package.yml
Meta/: vignette.rds
addivortes/: __init__.py  model.py  preprocessing.py
data/: Boston.rda  Cylinder.rda  Weather.rda
doc/: introduction.R  introduction.Rmd  introduction.html  prediction.R  prediction.Rmd  prediction.html
docs/: api.md  index.md  installation.md  quickstart.md  release.md
docs/tutorials/: categorical.md  convergence.md  introduction.md  prediction.md  spherical.md
python_src/: addivortes_python.cpp
tests/: boston_test.py  conftest.py  test_categorical_model.py  test_core_helpers.py  test_mcmc_algorithm.py  test_mcmc_parity.py  test_plotting.py  test_prediction_outputs.py  test_preprocessing.py  test_python_api.py  test_small_covariates.py  test_spherical_metric.py  test_traceplots.py
tests/fixtures/mcmc_parity/: generate_fixture.py  init_dim.npy  init_pred.npy  init_tess.npy  meta.npy  reference_posterior_sigma.npy  reference_trace_log_likelihood.npy  x_scaled.npy  y_scaled.npy
