[build-system]
requires = ["setuptools>=77", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "addivortes"
version = "0.6.1"
description = "Bayesian Additive Voronoi Tessellation regression for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Adam Stone", email = "adam.stone2@durham.ac.uk" },
  { name = "John Paul Gosling", email = "john-paul.gosling@durham.ac.uk" }
]
keywords = [
  "bayesian",
  "machine-learning",
  "nonparametric-regression",
  "voronoi",
  "spatial-statistics"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10"
]

[project.optional-dependencies]
test = [
  "pytest>=8"
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5"
]
dev = [
  "build>=1.2",
  "twine>=5",
  "pytest>=8",
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5"
]

[project.urls]
Homepage = "https://github.com/johnpaulgosling/py-addivortes"
Documentation = "https://johnpaulgosling.github.io/py-addivortes/"
Repository = "https://github.com/johnpaulgosling/py-addivortes"
Issues = "https://github.com/johnpaulgosling/py-addivortes/issues"

[tool.setuptools]
packages = ["addivortes"]
include-package-data = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
