[build-system]
requires = ["setuptools>=77", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "addivortes"
version = "0.6.1"
description = "Bayesian Additive Voronoi Tessellation regression for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Adam Stone", email = "adam.stone2@durham.ac.uk" },
  { name = "John Paul Gosling", email = "john-paul.gosling@durham.ac.uk" }
]
keywords = [
  "bayesian",
  "machine-learning",
  "nonparametric-regression",
  "voronoi",
  "spatial-statistics"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10"
]

[project.optional-dependencies]
plot = [
  "matplotlib"
]
test = [
  "pytest>=8"
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5"
]
dev = [
  "build>=1.5",
  "cibuildwheel>=3.4.1",
  "packaging>=26.2",
  "twine>=6.2",
  "pytest>=8",
  "matplotlib",
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5"
]

[project.urls]
Homepage = "https://github.com/johnpaulgosling/py-addivortes"
Documentation = "https://johnpaulgosling.github.io/py-addivortes/"
Repository = "https://github.com/johnpaulgosling/py-addivortes"
Issues = "https://github.com/johnpaulgosling/py-addivortes/issues"

[tool.setuptools]
packages = ["addivortes"]
include-package-data = false

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = ["pp*", "*-musllinux_*"]
test-command = "python -c \"from addivortes import AddiVortesRegressor; print(AddiVortesRegressor)\""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
